# ifk-storm-water-management

./: .copier-answers.yml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: disabled_github-action-type.yaml  github-action-lint.yaml  github-action-md-lint.yaml  github-action-pypi.yaml  github-action-test.yaml  github-action-test.yaml.yaml  github-action-type.yaml
docs/: index.md
notebooks/: topo_playground.ipynb
src/storm_water_management/: __init__.py  geojson_utils.py  main.py  storm_water_management.py  tif_preprocessing_utils.py  utils.py  utils_50m.py
tests/: test_geojson_utils.py  test_tif_preprocessing_utils.py  test_unit.py  test_utils.py
