[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ifk-storm-water-management"
version = "0.1.0"
description = "Unspecified."
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "IFK", email = "info@ingenjorsarbeteforklimatet.se" },
]
requires-python = ">=3.12"
dependencies = [
    "whitebox_workflows==1.3.5",
    "numpy==2.3.1",
    "pyproj==3.7.1",
    "matplotlib==3.10.3",
    "geopandas==1.1.1",
    "whitebox==2.3.6",
    "shapely==2.1.1",
    "rasterio==1.4.3",
]

[project.optional-dependencies]
lint = [
    "ruff ~= 0.1",
]
type = ["mypy ~= 1.7", "types-requests ~= 2.28"]
test = ["pytest ~= 7.1", "coverage ~= 6.5", "pytest-cov ~= 4.0"]
doc = [
    "mkdocs ~= 1.4",
    "mkdocs-material ~= 8.5",
    "mkdocstrings[python] ~= 0.19",
]
dev = [
    "ifk-storm-water-management[lint]",
    "ifk-storm-water-management[type]",
    "ifk-storm-water-management[test]",
    "ifk-storm-water-management[doc]",
    "pre-commit ~= 2.20",
    "ipykernel ~= 6.26",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["material"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W", "F", "B", "D", "I", "S"]
ignore = ["D203", "D213", "S101"]
unfixable = ["B", "S"]
pydocstyle.convention = "google"

[tool.mypy]
ignore_missing_imports = true
